[project]
name = "ipmapper"
version = "0.1.0"
description = "Fast offline IP-to-country lookup using RIR data with country names and currency support"
readme = "README.md"
authors = [
    { name = "Anas Khan", email = "83116240+anxkhn@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
]
license = { text = "MIT" }

[project.scripts]
ipmapper = "ipmapper:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
